# pysk8

./: README.md  pyproject.toml
examples/: basic.py  bleak_test.py  hardware.py
pysk8/: __init__.py  constants.py  core.py  extana.py  imu.py
