[project]
name = "pysk8"
version = "0.1"
requires-python = ">=3.13"
dependencies = [
    "bleak==3.0.2",
]

[tool.black]
max-line-length = 125

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["F401"]
line-length = 125

[tool.ruff.isort]
split-on-trailing-comma = true

[tool.pyright]
typeCheckingMode = "basic"
reportImportCycles = "information"
reportUnusedImport = "none"
reportUnusedVariable = "information"
reportDuplicateImport = "information"
reportWildcardImportFromLibrary = "warning"
reportConstantRedefinition = "warning"
reportIncompatibleMethodOverride = "warning"
reportUnknownParameterType = "information"
reportMissingParameterType = "information"
reportUnnecessaryContains = "warning"
reportUnnecessaryComparison = "warning"
reportImplicitStringConcatenation = "none"
